--- a/genindex.html
+++ b/genindex.html
@@ -117,6 +117,8 @@
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.clear">clear() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.clear_data_caches">clear_data_caches() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+</li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
@@ -274,6 +276,8 @@
         <li><a href="copyxnat.pyreporter.console.html#module-copyxnat.pyreporter.console">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.console_logger
 
@@ -281,8 +285,6 @@
         <li><a href="copyxnat.pyreporter.console_logger.html#module-copyxnat.pyreporter.console_logger">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.file_logger
 
