deploy: 235ac479d8b3fd8a61d6851a7c65939737ce03b5

--- a/genindex.html
+++ b/genindex.html
@@ -117,7 +117,7 @@
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.clear">clear() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.clear_data_caches">clear_data_caches() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.clear_data_caches">clear_data_caches() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
