--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -623,7 +623,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">ohif_generate_session</span><span class="p">()</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">clear_caches</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">clear_data_caches</span><span class="p">()</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">get_server</span><span class="p">()</span><span class="o">.</span><span class="n">clear_data_caches</span><span class="p">()</span>
 
         <span class="c1"># Give XNAT a little buffer time to process the session</span>
         <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">30</span><span class="p">)</span></div>
@@ -637,14 +637,6 @@
                                                           <span class="n">method</span><span class="o">=</span><span class="s1">&#39;POST&#39;</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
                     <span class="s1">&#39;Failure executing OHIF reset POST </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">uri</span><span class="p">))</span></div>
-
-<div class="viewcode-block" id="XnatExperiment.clear_data_caches"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.clear_data_caches">[docs]</a>    <span class="k">def</span> <span class="nf">clear_data_caches</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="n">uri</span> <span class="o">=</span> <span class="s1">&#39;monitoring?action=clear_caches&amp;cacheId=nrg&#39;</span>
-
-        <span class="c1"># Ignore return value because this call returns HTML which some</span>
-        <span class="c1"># XNAT backends interpret as an error</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">get_server</span><span class="p">()</span><span class="o">.</span><span class="n">does_request_succeed</span><span class="p">(</span><span class="n">uri</span><span class="o">=</span><span class="n">uri</span><span class="p">,</span> <span class="n">method</span><span class="o">=</span><span class="s1">&#39;GET&#39;</span><span class="p">)</span></div>
-
 
 <div class="viewcode-block" id="XnatExperiment.rebuild_catalog"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.rebuild_catalog">[docs]</a>    <span class="k">def</span> <span class="nf">rebuild_catalog</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">uri</span> <span class="o">=</span> <span class="s1">&#39;data/services/refresh/catalog?&#39;</span> \
@@ -810,6 +802,15 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">full_name</span><span class="p">))</span>
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">ohif</span></div>
+
+<div class="viewcode-block" id="XnatServer.clear_data_caches"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.clear_data_caches">[docs]</a>    <span class="k">def</span> <span class="nf">clear_data_caches</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Sends request to monitoring service to clear the nrg data caches&quot;&quot;&quot;</span>
+
+        <span class="n">uri</span> <span class="o">=</span> <span class="s1">&#39;monitoring?action=clear_caches&amp;cacheId=nrg&#39;</span>
+
+        <span class="c1"># Ignore return value because this call returns HTML which some</span>
+        <span class="c1"># XNAT backends interpret as an error</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">get_server</span><span class="p">()</span><span class="o">.</span><span class="n">does_request_succeed</span><span class="p">(</span><span class="n">uri</span><span class="o">=</span><span class="n">uri</span><span class="p">,</span> <span class="n">method</span><span class="o">=</span><span class="s1">&#39;GET&#39;</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="XnatServer.get_disallowed_project_ids"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_disallowed_project_ids">[docs]</a>    <span class="k">def</span> <span class="nf">get_disallowed_project_ids</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
