deploy: fe32abb01e8dbf1149210ae4f266bdaf1b8f57ab

--- a/_modules/copyxnat/commands/ohif_command.html
+++ b/_modules/copyxnat/commands/ohif_command.html
@@ -43,6 +43,7 @@
 <span class="sd">&quot;&quot;&quot;Command which exports XNAT project data onto local disk&quot;&quot;&quot;</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">Command</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.xnat_interface</span> <span class="kn">import</span> <span class="n">XnatExperiment</span><span class="p">,</span> <span class="n">XnatFile</span>
 
 
 <div class="viewcode-block" id="OhifCommand"><a class="viewcode-back" href="../../../copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand">[docs]</a><span class="k">class</span> <span class="nc">OhifCommand</span><span class="p">(</span><span class="n">Command</span><span class="p">):</span>
@@ -59,7 +60,12 @@
 
     <span class="k">def</span> <span class="nf">_run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_recurse</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span>
-        <span class="n">xnat_item</span><span class="o">.</span><span class="n">ohif_generate_session</span><span class="p">()</span>
+
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">XnatExperiment</span><span class="p">):</span>
+            <span class="n">xnat_item</span><span class="o">.</span><span class="n">ohif_generate_session</span><span class="p">()</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">xnat_item</span><span class="p">,</span> <span class="n">XnatFile</span><span class="p">):</span>
+            <span class="n">xnat_item</span><span class="o">.</span><span class="n">add_missing_metadata</span><span class="p">()</span>
+
         <span class="k">return</span> <span class="kc">True</span></div>
 </pre></div>
 
