--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -292,9 +292,6 @@
 <span class="sd">        :xml_cleaner: XmlCleaner to modify the XML as required</span>
 <span class="sd">        &quot;&quot;&quot;</span></div>
 
-<div class="viewcode-block" id="XnatItem.ohif_generate_session"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_generate_session">[docs]</a>    <span class="k">def</span> <span class="nf">ohif_generate_session</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Trigger regeneration of OHIF session data&quot;&quot;&quot;</span></div>
-
 <div class="viewcode-block" id="XnatItem.get_server"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_server">[docs]</a>    <span class="k">def</span> <span class="nf">get_server</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return the parent XnatServer object&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">get_server</span><span class="p">()</span></div>
@@ -456,28 +453,24 @@
 
         <span class="k">return</span> <span class="n">base_string</span> <span class="o">+</span> <span class="n">attr_string</span></div>
 
-<div class="viewcode-block" id="XnatFile.ohif_generate_session"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.ohif_generate_session">[docs]</a>    <span class="k">def</span> <span class="nf">ohif_generate_session</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-
-        <span class="c1"># Use files to supply missing metadata</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">add_missing_metadata</span><span class="p">()</span></div>
-
 <div class="viewcode-block" id="XnatFile.add_missing_metadata"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.add_missing_metadata">[docs]</a>    <span class="k">def</span> <span class="nf">add_missing_metadata</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">local_file</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Update parent items using metadata from this file&quot;&quot;&quot;</span>
-        <span class="n">tmp_local_file</span> <span class="o">=</span> <span class="kc">None</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">local_file</span><span class="p">:</span>
-            <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
-            <span class="n">tmp_local_file</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">,</span>
-                                                          <span class="bp">self</span><span class="o">.</span><span class="n">label</span><span class="p">)</span>
-            <span class="n">local_file</span> <span class="o">=</span> <span class="n">tmp_local_file</span>
 
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">metadata_missing</span><span class="p">():</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">add_missing_metadata</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">metadata_missing</span><span class="p">():</span>
+            <span class="n">tmp_local_file</span> <span class="o">=</span> <span class="kc">None</span>
+            <span class="k">if</span> <span class="ow">not</span> <span class="n">local_file</span><span class="p">:</span>
+                <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
+                <span class="n">tmp_local_file</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">,</span>
+                                                              <span class="bp">self</span><span class="o">.</span><span class="n">label</span><span class="p">)</span>
+                <span class="n">local_file</span> <span class="o">=</span> <span class="n">tmp_local_file</span>
+
             <span class="n">metadata</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parse_metadata</span><span class="p">(</span><span class="n">local_file</span><span class="p">)</span>
 
             <span class="k">if</span> <span class="n">metadata</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">provide_metadata</span><span class="p">(</span><span class="n">metadata</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="n">tmp_local_file</span><span class="p">:</span>
-            <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">tmp_local_file</span><span class="p">)</span></div>
+            <span class="k">if</span> <span class="n">tmp_local_file</span><span class="p">:</span>
+                <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">tmp_local_file</span><span class="p">)</span></div>
 
     <span class="k">def</span> <span class="nf">_parse_metadata</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">local_file</span><span class="p">):</span>
         <span class="n">metadata</span> <span class="o">=</span> <span class="p">{}</span>
@@ -486,8 +479,7 @@
                 <span class="n">tags</span> <span class="o">=</span> <span class="n">pydicom</span><span class="o">.</span><span class="n">dcmread</span><span class="p">(</span>
                     <span class="n">local_file</span><span class="p">,</span>
                     <span class="n">stop_before_pixels</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                    <span class="n">specific_tags</span><span class="o">=</span><span class="p">[</span>
-                        <span class="n">pydicom</span><span class="o">.</span><span class="n">datadict</span><span class="o">.</span><span class="n">tag_for_keyword</span><span class="p">(</span><span class="s1">&#39;SeriesInstanceUID&#39;</span><span class="p">)]</span>
+                    <span class="n">specific_tags</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;SeriesInstanceUID&#39;</span><span class="p">]</span>
                 <span class="p">)</span>
                 <span class="k">if</span> <span class="s1">&#39;SeriesInstanceUID&#39;</span> <span class="ow">in</span> <span class="n">tags</span><span class="p">:</span>
                     <span class="n">metadata</span><span class="p">[</span><span class="s1">&#39;series_instance_uid&#39;</span><span class="p">]</span> <span class="o">=</span> \
@@ -629,6 +621,8 @@
         <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">30</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="XnatExperiment.ohif_generate_session"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.ohif_generate_session">[docs]</a>    <span class="k">def</span> <span class="nf">ohif_generate_session</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Trigger regeneration of OHIF session data&quot;&quot;&quot;</span>
+
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_server</span><span class="p">()</span><span class="o">.</span><span class="n">ohif_present</span><span class="p">():</span>
             <span class="n">uri</span> <span class="o">=</span> <span class="s1">&#39;xapi/viewer/projects/</span><span class="si">{}</span><span class="s1">/experiments/</span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">label_map</span><span class="p">[</span><span class="n">XnatProject</span><span class="o">.</span><span class="n">xnat_type</span><span class="p">],</span>
