deploy: ea04e5224053c7cec12afcb2fba288f3a88e8ade

--- a/copyxnat.xnat_backend.pyxnat_server.html
+++ b/copyxnat.xnat_backend.pyxnat_server.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.xnat_backend.server_factory module" href="copyxnat.xnat_backend.server_factory.html" />
-    <link rel="prev" title="copyxnat.xnat_backend package" href="copyxnat.xnat_backend.html" /> 
+    <link rel="prev" title="copyxnat.xnat_backend.lazy_list module" href="copyxnat.xnat_backend.lazy_list.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.html" title="copyxnat.xnat_backend package"
+          <a href="copyxnat.xnat_backend.lazy_list.html" title="copyxnat.xnat_backend.lazy_list module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -474,8 +474,8 @@
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat_backend.html"
-                        title="previous chapter">copyxnat.xnat_backend package</a></p>
+  <p class="topless"><a href="copyxnat.xnat_backend.lazy_list.html"
+                        title="previous chapter">copyxnat.xnat_backend.lazy_list module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.xnat_backend.server_factory.html"
                         title="next chapter">copyxnat.xnat_backend.server_factory module</a></p>
@@ -513,7 +513,7 @@
           <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.html" title="copyxnat.xnat_backend package"
+          <a href="copyxnat.xnat_backend.lazy_list.html" title="copyxnat.xnat_backend.lazy_list module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
