--- a/genindex.html
+++ b/genindex.html
@@ -69,7 +69,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.add_missing_metadata">add_missing_metadata() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.add_new">add_new() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.add_new">add_new() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
@@ -163,7 +163,7 @@
 </li>
       <li><a href="copyxnat.pyreporter.console_logger.html#copyxnat.pyreporter.console_logger.ConsoleLogger">ConsoleLogger (class in copyxnat.pyreporter.console_logger)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.contains">contains() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.contains">contains() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache">CopyCache (class in copyxnat.xnat.copy_cache)</a>
 </li>
@@ -309,8 +309,6 @@
         <li><a href="copyxnat.pyreporter.progress.html#module-copyxnat.pyreporter.progress">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.pyreporter
 
@@ -318,6 +316,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -417,6 +417,13 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.xnat_backend.lazy_list
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.lazy_list.html#module-copyxnat.xnat_backend.lazy_list">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.xnat_backend.pyxnat_server
 
       <ul>
@@ -458,7 +465,7 @@
         <li><a href="copyxnat.xnat_backend.xnat_session.html#module-copyxnat.xnat_backend.xnat_session">module</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.count">count() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.count">count() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create">create() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem class method)</a>
 
@@ -684,7 +691,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.get_all_metadata">get_all_metadata() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.get_all_metadata">get_all_metadata() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_archive_path">get_archive_path() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
@@ -730,9 +737,9 @@
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.get_label">(copyxnat.xnat_backend.simple_xnat.SimpleXnatItem method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.get_labels">get_labels() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.get_labels">get_labels() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.get_metadata">get_metadata() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.get_metadata">get_metadata() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 
       <ul>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.get_metadata">(copyxnat.xnat_backend.simple_xnat.SimpleXnatItem method)</a>
@@ -904,7 +911,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList">LazyList (class in copyxnat.xnat_backend.simple_xnat)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList">LazyList (class in copyxnat.xnat_backend.lazy_list)</a>
 </li>
       <li><a href="copyxnat.pyreporter.console_logger.html#copyxnat.pyreporter.console_logger.ConsoleLogger.log">log() (copyxnat.pyreporter.console_logger.ConsoleLogger method)</a>
 
@@ -1059,6 +1066,8 @@
         <li><a href="copyxnat.xnat.xnat_xml.html#module-copyxnat.xnat.xnat_xml">copyxnat.xnat.xnat_xml</a>
 </li>
         <li><a href="copyxnat.xnat_backend.html#module-copyxnat.xnat_backend">copyxnat.xnat_backend</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.lazy_list.html#module-copyxnat.xnat_backend.lazy_list">copyxnat.xnat_backend.lazy_list</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#module-copyxnat.xnat_backend.pyxnat_server">copyxnat.xnat_backend.pyxnat_server</a>
 </li>
@@ -1866,7 +1875,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.yield_items">yield_items() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
+      <li><a href="copyxnat.xnat_backend.lazy_list.html#copyxnat.xnat_backend.lazy_list.LazyList.yield_items">yield_items() (copyxnat.xnat_backend.lazy_list.LazyList method)</a>
 </li>
   </ul></td>
 </tr></table>
