--- a/_modules/index.html
+++ b/_modules/index.html
@@ -63,6 +63,7 @@
 <li><a href="copyxnat/xnat/xml_cleaner.html">copyxnat.xnat.xml_cleaner</a></li>
 <li><a href="copyxnat/xnat/xnat_interface.html">copyxnat.xnat.xnat_interface</a></li>
 <li><a href="copyxnat/xnat/xnat_xml.html">copyxnat.xnat.xnat_xml</a></li>
+<li><a href="copyxnat/xnat_backend/lazy_list.html">copyxnat.xnat_backend.lazy_list</a></li>
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
 <li><a href="copyxnat/xnat_backend/server_factory.html">copyxnat.xnat_backend.server_factory</a></li>
 <li><a href="copyxnat/xnat_backend/simple_xnat.html">copyxnat.xnat_backend.simple_xnat</a></li>
