--- a/genindex.html
+++ b/genindex.html
@@ -667,10 +667,10 @@
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatFile.file_attributes">(copyxnat.xnat_backend.simple_xnat.SimpleXnatFile method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.file_logger.html#copyxnat.pyreporter.file_logger.FileLogger">FileLogger (class in copyxnat.pyreporter.file_logger)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.files">files() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
 
       <ul>
@@ -678,6 +678,8 @@
 </li>
       </ul></li>
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.find_command">find_command() (in module copyxnat.commands.find_commands)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.find_label">find_label() (copyxnat.xnat_backend.simple_xnat.SimpleXnatItem class method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.full_label">full_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 </li>
@@ -889,24 +891,24 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.label">label() (copyxnat.xnat_backend.simple_xnat.SimpleXnatItem method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatAssessor.label_key">label_key (copyxnat.xnat_backend.simple_xnat.SimpleXnatAssessor attribute)</a>
+      <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatAssessor.label_keys">label_keys (copyxnat.xnat_backend.simple_xnat.SimpleXnatAssessor attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatExperiment.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatExperiment attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatExperiment.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatExperiment attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatFile.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatFile attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatFile.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatFile attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatItem property)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatItem property)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatProject.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatProject attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatProject.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatProject attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatReconstruction.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatReconstruction attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatReconstruction.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatReconstruction attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatScan.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatScan attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatScan.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatScan attribute)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatSubject.label_key">(copyxnat.xnat_backend.simple_xnat.SimpleXnatSubject attribute)</a>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatSubject.label_keys">(copyxnat.xnat_backend.simple_xnat.SimpleXnatSubject attribute)</a>
 </li>
       </ul></li>
   </ul></td>
