--- a/_modules/copyxnat/config/app_settings.html
+++ b/_modules/copyxnat/config/app_settings.html
@@ -70,7 +70,8 @@
                  <span class="n">subject_limit</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">ohif_rebuild</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">clear_caches</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">add_missing_metadata</span><span class="o">=</span><span class="kc">True</span>
+                 <span class="n">add_missing_metadata</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                 <span class="n">backend</span><span class="o">=</span><span class="s1">&#39;pyxnat&#39;</span>
                  <span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Create global application settings</span>
@@ -97,6 +98,8 @@
 <span class="sd">        @param add_missing_metadata: if True and a session does not have a UID</span>
 <span class="sd">        attribute set, then attempt to determine this from one of the DICOM</span>
 <span class="sd">        files. Does not work in zip upload mode</span>
+<span class="sd">        @param backend: Select the backend library to use for communicating with</span>
+<span class="sd">        XNAT</span>
 <span class="sd">        XNAT server</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">skip_existing</span> <span class="o">=</span> <span class="n">skip_existing</span>
@@ -110,7 +113,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">subject_limit</span> <span class="o">=</span> <span class="n">subject_limit</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">ohif_rebuild</span> <span class="o">=</span> <span class="n">ohif_rebuild</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">clear_caches</span> <span class="o">=</span> <span class="n">clear_caches</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">add_missing_metadata</span> <span class="o">=</span> <span class="n">add_missing_metadata</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">add_missing_metadata</span> <span class="o">=</span> <span class="n">add_missing_metadata</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">backend</span> <span class="o">=</span> <span class="n">backend</span></div>
 </pre></div>
 
             <div class="clearer"></div>
