--- a/_modules/copyxnat/xnat_backend/lazy_list.html
+++ b/_modules/copyxnat/xnat_backend/lazy_list.html
@@ -50,7 +50,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_parent</span> <span class="o">=</span> <span class="n">parent</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_wrapper_cls</span> <span class="o">=</span> <span class="n">wrapper_cls</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_rest_client</span> <span class="o">=</span> <span class="n">parent</span><span class="o">.</span><span class="n">rest_client</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_label_key</span> <span class="o">=</span> <span class="n">wrapper_cls</span><span class="o">.</span><span class="n">label_key</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_rest_type</span> <span class="o">=</span> <span class="n">wrapper_cls</span><span class="o">.</span><span class="n">rest_type</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_optional</span> <span class="o">=</span> <span class="n">wrapper_cls</span><span class="o">.</span><span class="n">optional</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_recently_created</span> <span class="o">=</span> <span class="p">[]</span>
@@ -109,7 +108,7 @@
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_list</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">or</span> <span class="p">(</span><span class="n">allow_repopulate</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">_recently_created</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_list</span> <span class="o">=</span> <span class="p">{</span>
-                <span class="n">item</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_label_key</span><span class="p">]:</span> <span class="n">item</span> <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">_wrapper_cls</span><span class="o">.</span><span class="n">find_label</span><span class="p">(</span><span class="n">item</span><span class="p">):</span> <span class="n">item</span> <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_rest_client</span><span class="o">.</span><span class="n">request_json_property</span><span class="p">(</span>
                     <span class="n">uri</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_uri</span><span class="p">(),</span> <span class="n">optional</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_optional</span><span class="p">)</span>
             <span class="p">}</span>
