--- a/_modules/copyxnat/xnat_backend/simple_xnat.html
+++ b/_modules/copyxnat/xnat_backend/simple_xnat.html
@@ -218,6 +218,18 @@
         <span class="k">return</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_parent</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent_container_list</span><span class="p">)</span><span class="o">.</span><span class="n">add_new</span>\
             <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_label</span><span class="p">)</span></div>
 
+<div class="viewcode-block" id="SimpleXnatItem.find_label"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.find_label">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="k">def</span> <span class="nf">find_label</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">metadata</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Find a valid label from the given metadata dictionary&quot;&quot;&quot;</span>
+        <span class="n">label</span> <span class="o">=</span> <span class="kc">None</span>
+        <span class="k">for</span> <span class="n">next_label</span> <span class="ow">in</span> <span class="bp">cls</span><span class="o">.</span><span class="n">label_keys</span><span class="p">:</span>
+            <span class="k">if</span> <span class="p">(</span><span class="ow">not</span> <span class="n">label</span><span class="p">)</span> <span class="ow">and</span> <span class="n">metadata</span><span class="p">[</span><span class="n">next_label</span><span class="p">]:</span>
+                <span class="n">label</span> <span class="o">=</span> <span class="n">metadata</span><span class="p">[</span><span class="n">next_label</span><span class="p">]</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">label</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Could not find a suitable label key in the &#39;</span>
+                             <span class="s1">&#39;metadata to identify this item&#39;</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">label</span></div>
+
 <div class="viewcode-block" id="SimpleXnatItem.get_existing"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.get_existing">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">get_existing</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">metadata</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Create a new child item of this class type from given parent&quot;&quot;&quot;</span>
@@ -293,7 +305,7 @@
 
     <span class="nd">@property</span>
     <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
-    <span class="k">def</span> <span class="nf">label_key</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">label_keys</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Name of the dictionary key in the item&#39;s metadata dict which will be</span>
 <span class="sd">        used to match items between servers. In most cases `label` is</span>
 <span class="sd">        appropriate if it exists for this item&#39;s metadata&quot;&quot;&quot;</span>
@@ -371,8 +383,7 @@
 <span class="k">class</span> <span class="nc">SimpleXnatResourceBase</span><span class="p">(</span><span class="n">SimpleXnatItem</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT resource interface&quot;&quot;&quot;</span>
 
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;label&#39;</span>
-    <span class="c1"># label_key = &#39;xnat_abstractresource_id&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;label&#39;</span><span class="p">,</span> <span class="s1">&#39;xnat_abstractresource_id&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;label&#39;</span><span class="p">,</span> <span class="s1">&#39;xnat_abstractresource_id&#39;</span><span class="p">]</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">parent</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">metadata</span><span class="p">):</span>
@@ -513,7 +524,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT file interface&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;files&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;Name&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Name&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Name&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;file_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">False</span>
@@ -576,7 +587,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT project interface&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;projects&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;ID&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;cached_project_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">False</span>
@@ -595,7 +606,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT subject interface&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;subjects&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;label&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;label&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;subject_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">False</span>
@@ -614,7 +625,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT experiment interface&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;experiments&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;label&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;label&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;experiment_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">False</span>
@@ -643,7 +654,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT interface for items which can contain resources&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;scans&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;ID&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;scan_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">True</span>  <span class="c1"># not necessarily present in a derived subjectAssessorData</span></div>
@@ -653,7 +664,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat assessor interface&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;assessors&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;label&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;label&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;assessor_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">True</span>  <span class="c1"># not necessarily present in a derived subjectAssessorData</span></div>
@@ -663,7 +674,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around an XNAT reconstruction&quot;&quot;&quot;</span>
 
     <span class="n">rest_type</span> <span class="o">=</span> <span class="s1">&#39;reconstructions&#39;</span>
-    <span class="n">label_key</span> <span class="o">=</span> <span class="s1">&#39;ID&#39;</span>
+    <span class="n">label_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">rest_id_keys</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;ID&#39;</span><span class="p">]</span>
     <span class="n">parent_container_list</span> <span class="o">=</span> <span class="s1">&#39;reconstruction_list&#39;</span>
     <span class="n">optional</span> <span class="o">=</span> <span class="kc">True</span>  <span class="c1"># not necessarily present in a derived subjectAssessorData</span></div>
