deploy: 3c081334b45306b96bed04b303440fbd50ad13d1

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ To see help for a particular command, run with the command name and <code class=
 <ul class="simple">
 <li><p>Reconstructions can be downloaded but cannot be copied to another server</p></li>
 <li><p>Assessor In-Resources can be downloaded but cannot be copied to another server</p></li>
+<li><p>Support for eCat files is limited and untested</p></li>
 </ul>
 </div>
 </div>
